--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "npm run e2e"
   },
   "dependencies": {
+    "element-ui": "^1.3.6",
     "firebase": "^4.1.2",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
