--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^1.3.6",
     "firebase": "^4.1.2",
     "vue": "^2.3.3",
+    "vue-quill-editor": "^2.2.1",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
