--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "firebase": "^4.1.2",
     "vue": "^2.3.3",
     "vue-quill-editor": "^2.2.1",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vue-sweetalert": "^0.1.17"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
